--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "portofolio",
-  "version": "0.1.0",
-  "private": true,
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "animejs": "^3.2.2",
-    "lucide-react": "^0.447.0",
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "@astrojs/react": "^4.3.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "animejs": "^4.0.2",
+    "astro": "^5.11.1",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.4",
+    "motion": "^12.23.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   }
 }
