--- a/package.json
+++ b/package.json
@@ -8,19 +8,26 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "@astrojs/react": "^4.3.0",
-    "@astrojs/vercel": "^8.2.6",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "animejs": "^4.0.2",
-    "astro": "^5.11.1",
-    "gsap": "^3.13.0",
-    "lenis": "^1.3.4",
-    "motion": "^12.23.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.47.0"
+  },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    },
+    "dependencies": {
+      "@astrojs/react": "^4.3.0",
+      "@astrojs/vercel": "^8.2.6",
+      "@tailwindcss/vite": "^4.1.11",
+      "@types/react": "^19.1.8",
+      "@types/react-dom": "^19.1.6",
+      "animejs": "^4.0.2",
+      "astro": "^5.11.1",
+      "gsap": "^3.13.0",
+      "lenis": "^1.3.4",
+      "motion": "^12.23.5",
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0",
+      "tailwindcss": "^4.1.11"
+    }
   }
-}
