--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "animejs": "^4.0.2",
-    "astro": "^5.11.1",
+    "astro": "5.13.3",
+    "astro-icon": "^1.1.5",
     "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "motion": "^12.23.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/skill-icons": "^1.2.3"
   }
 }
